client/src/components/style.css
.starbox {
  display: inline-grid;
  color: #20B2AA;
}

.starbox div {
  grid-column: 1;
  grid-row: 2;
  overflow: hidden;
  font-size: 35px;
}

/* Justin's Stars */
.JStarbox {
  display: inline-grid;
  color: #20B2AA;
}

.JStarbox div {
  grid-column: 1;
  grid-row: 2;
  overflow: hidden;
  font-size: 20px;
}

progress {
  border: none;
  width: 80%;
  height: 25px;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 5px;
  padding-bottom: 5px;
}

progress::-webkit-progress-value {
  background: #20B2AA;
}

progress::-webkit-progress-bar {
  background: grey;
}

.Flexbox-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: flex-start;
  height: 700px;
  flex-wrap: wrap;
  /* background-color: grey; */
}

.Flexbox-item {
  width: 1100px;
  margin: 1px;
  border: 3px;
  justify-content: space-evenly;
  flex-basis: auto;
  align-items: center;
  /* background-color: hotpink; */
}

.StarAndBar {
  justify-content: left;
  /* margin: 10px;
  padding: 100px; */
}

.AverageStars {
  width: 500px;
  height: 100px;
  margin: 10px;
  padding: 10px;
  display:inline-block;
  justify-content: center;
}

.drop {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  background-color: indigo;
}

.RItem {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  /* background-color: white; */
}

.MReviews {
  height: 30px;
  display: flex;
  justify-content: center;
}

.sortReview {
  display: flex;
  justify-content: center;
}

.ReviewList{
  display: flex;
  justify-content: center;
}

.RatingText {
  display: flex;
  justify-content: center;
  font-size: 50px;
  font-family: Georgia, 'Times New Roman', Times, serif;
}

.OneStar {
  display: flex;
  justify-content: center;
}

.TwoStar {
  display: flex;
  justify-content: center;
}

.ThreeStar {
  display: flex;
  justify-content: center;
}

.FourStar {
  display: flex;
  justify-content: center;
}

.FiveStar {
  display: flex;
  justify-content: center;
}

.RecommendedStar {
  display: flex;
  justify-content: center;
}

.BarTitle {
  text-align: left;
}

.ProgressBar {
  display: flex;
  justify-content: flex-start;
}

.TextBar {
  /* display: flex;
  flex-direction: column;
  justify-content: space-evenly; */
  align-items: center;
  font-size: 50px;
  width: 75%;
  margin: 100px;
}
.ProgressCon {
  margin: 100px;
}

.Bar {
  display: flex;
  justify-content: space-between;
  margin: 30px;
  margin-left: 2%;
}

.SortContainer {
  display: block;
  margin-left: 87%;
}

.Wrapper {
  padding-left: 10%;
  padding-right: 10%;
}

 /* color: #d8b2d1 */
/* .StarAndBar {
  display: flex;
  width: 75%
} */

/* .progress {
  align-content: left;
} */

/* .SharedStars {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
} */


/* .StarandBarContainer {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;

  justify-content: space-between;
  background-color: hotpink;
}

.DropandItemContainer {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-end;
  background-color: purple;
} */
/* .sortReview {
  width: 100px;
  margin: 2px;
  border: 3px solid purple;
  background-color: grey;
} */

/* .AverageStars {
  flex-direction: column;
} */
/*
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;

  */

